practice8/config-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: config-server
  name: config-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: config-server
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: config-server
    spec:
      containers:
        - image: 192.168.49.2:5000/practice8-config-server
          name: config-server
          ports:
            - containerPort: 8888
              protocol: TCP
      restartPolicy: Always
