practice8/flights-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: flights-service
  name: flights-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: flights-service
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: flights-service
    spec:
      containers:
        - image: localhost:5000/practice8-flights-service
          name: flights-service
          ports:
            - containerPort: 8081
              protocol: TCP
      restartPolicy: Always
