practice8/load-balancer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: load-balancer
  name: load-balancer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: load-balancer
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: load-balancer
    spec:
      containers:
        - image: docker.io/library/practice8-load-balancer:latest
          name: load-balancer
          ports:
            - containerPort: 9000
              protocol: TCP
      restartPolicy: Always
