practice8/postgres-db3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: postgres-db3
  name: postgres-db3
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgres-db3
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: postgres-db3
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: db3
            - name: POSTGRES_PASSWORD
              value: password3
            - name: POSTGRES_USER
              value: user3
          image: postgres:16-alpine3.19
          name: postgres-db3
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db3-data
      restartPolicy: Always
      volumes:
        - name: db3-data
          persistentVolumeClaim:
            claimName: db3-data
