practice8/service-discovery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: service-discovery
  name: service-discovery
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: service-discovery
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: service-discovery
    spec:
      containers:
        - image: docker.io/library/practice8-service-discovery:latest
          name: service-discovery
          ports:
            - containerPort: 8761
              protocol: TCP
      restartPolicy: Always
