practice8/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: api-gateway
  name: api-gateway
spec:
  type: NodePort  # Add this line
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: api-gateway
