practice8/config-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: config-server
  name: config-server
spec:
  ports:
    - name: http
      port: 8888
      targetPort: 8888
  selector:
    io.kompose.service: config-server
