practice8/user-fullname-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: user-fullname-service
  name: user-fullname-service
spec:
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  selector:
    io.kompose.service: user-fullname-service
