practice8/user-role-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: user-role-service
  name: user-role-service
spec:
  ports:
    - name: http
      port: 8082
      targetPort: 8082
  selector:
    io.kompose.service: user-role-service
